{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 94,
  "lineage": "e5843517-a3a4-e84e-4505-195580b3c0e0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "cli-nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00a9d4a05375b2763",
            "arn": "arn:aws:ec2:us-east-1:798016761838:instance/i-0da49c95918401f2e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0da49c95918401f2e",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-070fca89b01aae3c4",
            "private_dns": "ip-10-0-1-77.ec2.internal",
            "private_ip": "10.0.1.77",
            "public_ip": "75.101.218.145",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 0,
                "volume_id": "vol-0287c1ce2a85eb194",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-038a4f3828c71ff8d",
            "tags": {
              "Name": "cli-nat"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09284dab7db6b6074"
            ]
          },
          "dependencies": [
            "aws_security_group.cli-sg-nat",
            "aws_subnet.cli-subnet-public-1",
            "aws_vpc.cli-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "cli-igw-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0d99ea64160a3f555",
            "owner_id": "798016761838",
            "tags": {
              "Name": "cli-igw-1"
            },
            "vpc_id": "vpc-0d63b47e62e76ef1f"
          },
          "dependencies": [
            "aws_vpc.cli-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "cli-lb-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:798016761838:loadbalancer/app/task-4-lb/fbe92e646693dc20",
            "arn_suffix": "app/task-4-lb/fbe92e646693dc20",
            "dns_name": "task-4-lb-802653146.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:798016761838:loadbalancer/app/task-4-lb/fbe92e646693dc20",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "task-4-lb",
            "security_groups": [
              "sg-052f614967d3ddf95"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-038a4f3828c71ff8d"
              },
              {
                "subnet_id": "subnet-0427ea2ee2b81e5fa"
              }
            ],
            "subnets": [
              "subnet-038a4f3828c71ff8d",
              "subnet-0427ea2ee2b81e5fa"
            ],
            "tags": {
              "Name": "cli-lb-1"
            },
            "vpc_id": "vpc-0d63b47e62e76ef1f",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.cli-sg-1",
            "aws_subnet.cli-subnet-public-1",
            "aws_subnet.cli-subnet-public-2",
            "aws_vpc.cli-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "cli-lb-listner-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:798016761838:listener/app/task-4-lb/fbe92e646693dc20/0248269be1bfd8a7",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:798016761838:targetgroup/cli-tg-1/22b8eb4645096ad3",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:798016761838:listener/app/task-4-lb/fbe92e646693dc20/0248269be1bfd8a7",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:798016761838:loadbalancer/app/task-4-lb/fbe92e646693dc20",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_lb.cli-lb-1",
            "aws_lb_target_group.cli-tg-1",
            "aws_security_group.cli-sg-1",
            "aws_subnet.cli-subnet-public-1",
            "aws_subnet.cli-subnet-public-2",
            "aws_vpc.cli-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "cli-tg-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:798016761838:targetgroup/cli-tg-1/22b8eb4645096ad3",
            "arn_suffix": "targetgroup/cli-tg-1/22b8eb4645096ad3",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:798016761838:targetgroup/cli-tg-1/22b8eb4645096ad3",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "cli-tg-1",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0d63b47e62e76ef1f"
          },
          "dependencies": [
            "aws_vpc.cli-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-RT-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0e49cef05db9fd899",
            "owner_id": "798016761838",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private-RT-1"
            },
            "vpc_id": "vpc-0d63b47e62e76ef1f"
          },
          "dependencies": [
            "aws_vpc.cli-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-RT-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0ed0362431f07d25c",
            "owner_id": "798016761838",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d99ea64160a3f555",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-RT-1"
            },
            "vpc_id": "vpc-0d63b47e62e76ef1f"
          },
          "dependencies": [
            "aws_internet_gateway.cli-igw-1",
            "aws_vpc.cli-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-rt-association-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05ef37b5c6cb59bdc",
            "route_table_id": "rtb-0e49cef05db9fd899",
            "subnet_id": "subnet-00a733495b97b093c"
          },
          "dependencies": [
            "aws_route_table.private-RT-1",
            "aws_subnet.cli-subnet-private-1",
            "aws_vpc.cli-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-rt-association-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09388c63203f50fc9",
            "route_table_id": "rtb-0e49cef05db9fd899",
            "subnet_id": "subnet-064fa2fce136ccf17"
          },
          "dependencies": [
            "aws_route_table.private-RT-1",
            "aws_subnet.cli-subnet-private-2",
            "aws_vpc.cli-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-rt-association-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-003abd866cf3f53ea",
            "route_table_id": "rtb-0ed0362431f07d25c",
            "subnet_id": "subnet-038a4f3828c71ff8d"
          },
          "dependencies": [
            "aws_internet_gateway.cli-igw-1",
            "aws_route_table.public-RT-1",
            "aws_subnet.cli-subnet-public-1",
            "aws_vpc.cli-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-rt-association-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f248259248168d12",
            "route_table_id": "rtb-0ed0362431f07d25c",
            "subnet_id": "subnet-0427ea2ee2b81e5fa"
          },
          "dependencies": [
            "aws_internet_gateway.cli-igw-1",
            "aws_route_table.public-RT-1",
            "aws_subnet.cli-subnet-public-2",
            "aws_vpc.cli-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cli-sg-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:798016761838:security-group/sg-052f614967d3ddf95",
            "description": "Allow 22 and 80 from all internet inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-052f614967d3ddf95",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "cli-sg-1",
            "name_prefix": null,
            "owner_id": "798016761838",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cli-sg-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d63b47e62e76ef1f"
          },
          "dependencies": [
            "aws_vpc.cli-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cli-sg-nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:798016761838:security-group/sg-09284dab7db6b6074",
            "description": "cli-sg-nat",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09284dab7db6b6074",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 420,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 420
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "cli-sg-nat",
            "name_prefix": null,
            "owner_id": "798016761838",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cli-sg-nat"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d63b47e62e76ef1f"
          },
          "dependencies": [
            "aws_vpc.cli-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cli-subnet-private-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:798016761838:subnet/subnet-00a733495b97b093c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-00a733495b97b093c",
            "map_public_ip_on_launch": false,
            "owner_id": "798016761838",
            "tags": {
              "Name": "cli-subnet-private-1"
            },
            "vpc_id": "vpc-0d63b47e62e76ef1f"
          },
          "dependencies": [
            "aws_vpc.cli-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cli-subnet-private-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:798016761838:subnet/subnet-064fa2fce136ccf17",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-064fa2fce136ccf17",
            "map_public_ip_on_launch": false,
            "owner_id": "798016761838",
            "tags": {
              "Name": "cli-subnet-private-2"
            },
            "vpc_id": "vpc-0d63b47e62e76ef1f"
          },
          "dependencies": [
            "aws_vpc.cli-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cli-subnet-public-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:798016761838:subnet/subnet-038a4f3828c71ff8d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-038a4f3828c71ff8d",
            "map_public_ip_on_launch": true,
            "owner_id": "798016761838",
            "tags": {
              "Name": "cli-subnet-public-1"
            },
            "vpc_id": "vpc-0d63b47e62e76ef1f"
          },
          "dependencies": [
            "aws_vpc.cli-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cli-subnet-public-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:798016761838:subnet/subnet-0427ea2ee2b81e5fa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0427ea2ee2b81e5fa",
            "map_public_ip_on_launch": true,
            "owner_id": "798016761838",
            "tags": {
              "Name": "cli-subnet-public-2"
            },
            "vpc_id": "vpc-0d63b47e62e76ef1f"
          },
          "dependencies": [
            "aws_vpc.cli-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "cli-vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:798016761838:vpc/vpc-0d63b47e62e76ef1f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ee8644bf5e4e2c97",
            "default_route_table_id": "rtb-0c9891ef25ef3240e",
            "default_security_group_id": "sg-0b09582d228fd7df1",
            "dhcp_options_id": "dopt-cc70ddb6",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0d63b47e62e76ef1f",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c9891ef25ef3240e",
            "owner_id": "798016761838",
            "tags": {
              "Name": "cli-vpc"
            }
          }
        }
      ]
    }
  ]
}